style.css
/* ... */
#header-welcome {
    display: flex;
    /* vertical-align: middle;
    min-width: calc(350px + 1.5vw); */
    border-color: black;
    overflow: visible;
    white-space: nowrap;
    align-items: center;
}

#welcome-container {
    vertical-align: middle;
}

.header-block-users-welcome {
    width: calc(8.5rem + 6.5vw);
    border-color: bisque;
}

.header-block-users {
    /* width: 280px; */
    width: calc(13rem + 7vw);
    border-color: yellow;
}

#header-buttons {
    /* display: inline-block; */
    margin-left: calc(5px + 0.2vw);
    /* min-width: 400px; */
}

#style-header-buttons {
    /* display: flex;
    flex-wrap: wrap; */
    vertical-align: middle;
    border-color: green;
    /* width: calc(12.5rem + 10vw); */
}

#schedule-selector {
    /* margin-left: 50px; */
    /* border: blueviolet solid 5px;
    border-radius: 5px; */
    margin-bottom: 1px;
    padding-bottom: 1px;
    vertical-align: bottom;
    width: 155px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

/* #schedule-selector:focus {
    box-shadow: 0 0 0 1px lime;
} */

#add-schedule {
    /* position: relative;
    top: 10px; */
    height: 30px;
    vertical-align: top;
    /* border: 1px groove silver;
    border-radius: 5px; */
}

#add-schedule:active {
    position: relative;
    left: 1px;
}

#button-create {
    visibility: hidden;
}

#header-block-1 {
    min-width: 600px;
}

/* #header-block-2 {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
} */

/* #options-header-1 {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
} */

#header-schedule-options-1 {
    border-color: chartreuse;
    display: flex;
    justify-content: space-between;
    flex-shrink: 2;
}

#options-header {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    vertical-align: top;
    border-color: red;
    width: 85%;
    flex-shrink: 4;
}

#import-export-buttons {
    padding-left: 20px;
    padding-top: 10px;
    box-sizing: border-box;
}

#import-export-buttons-style {
    height: 30px;
    border-color: orchid;
}

#import-options {
    /* height: max-content; */
    display: inline-block;
    margin-top: 20px;
}

/* #import-container {
    width: min-content;
} */

#export-container {
    border-color: white;
}

#import-label, #load-file {
    padding: 3px 5px;
    box-sizing: border-box;
    border: 1px solid rgb(36, 35, 35);
    border-radius: 5px;
    /* background-color: rgb(187, 119, 250); */
    background-color: #4CAF50;
    /* color: rgb(36, 35, 35); */
    color: whitesmoke;
    user-select: none;
    /* cursor: default; */ /* a label don't require this property*/
    font-size: calc(0.75rem + 0.4vw);
    /* font-family: 'DejaVu Sans Mono'; */
}

#import-label:hover {
    /* border: 1px solid blueviolet; */
    box-shadow: 0px 0px 1px 1px silver;
    color: black;
}

#import-label:active {
    background: linear-gradient(to bottom right, darkgrey 0%, #4CAF50 100%);;
    padding-left: 6px;
    padding-right: 4px;
}

#import-selected-container {
    border: 1px solid;
    border-radius: 5px;
    box-sizing: border-box;
    padding: 3px;
    background-color: silver;
    cursor: default;
}

/* #import-selected-style {
    display: flex;
} */

#import-selected {
    display: inline-block;
    max-width: 17rem;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    /* border: 1px solid blueviolet; */
    /* border-color: blueviolet; */
    vertical-align: middle;
    padding: 2px;
    padding-bottom: 4px;
    font-weight: bold;
}

#import-selected:hover {
    cursor: default;
    /* font-weight: bold; */
}

#load-file {
    padding: 1px 3px;
}

#load-file:hover {
    /* border: 1px solid blueviolet; */
    box-shadow: 0px 0px 1px 1px rgb(112, 109, 109);
    color: black;
}

#load-file:active {
    background: linear-gradient(to bottom right, darkgrey 0%, #4CAF50 100%);;
    padding-left: 4px;
    padding-right: 2px;
}

.button-darkgray {
    padding: 3px 5px;
    box-sizing: border-box;
    border: 1px solid rgb(36, 35, 35);
    border-radius: 5px;
    /* background-color: rgb(187, 119, 250); */
    background-color: #616d62;
    /* color: rgb(36, 35, 35); */
    color: rgb(223, 217, 217);
    user-select: none;
    cursor: default;
    font-size: calc(0.75rem + 0.4vw);
}

.button-darkgray:hover {
    /* border: 1px solid blueviolet; */
    box-shadow: 0px 0px 1px 1px silver;
    color: silver;
}

.button-darkgray:active {
    background: linear-gradient(to bottom right, darkgrey 0%, #616d62 100%);;
    padding-left: 6px;
    padding-right: 4px;
    color: black;
}

.button-darkgreen {
    padding: 3px 5px;
    box-sizing: border-box;
    border: 1px solid rgb(36, 35, 35);
    border-radius: 5px;
    background-color: #4CAF50;
    color: whitesmoke;
    user-select: none;
    cursor: default;
    font-size: calc(0.75rem + 0.4vw);
}

.button-darkgreen:hover {
    /* border: 1px solid blueviolet; */
    box-shadow: 0px 0px 1px 1px silver;
    color: black;
}

.button-darkgreen:active {
    background: linear-gradient(to bottom right, darkgrey 0%, #4CAF50 100%);;
    padding-left: 6px;
    padding-right: 4px;
}

.button-darkgreen-confirm-block {
    padding: 1px 3px;
    box-sizing: border-box;
    border: 1px solid rgb(36, 35, 35);
    border-radius: 5px;
    background-color: #4CAF50;
    color: rgb(44, 43, 43);
    user-select: none;
    cursor: default;
    font-size: 0.9rem;
}

.button-darkgreen-confirm-block:hover {
    /* border: 1px solid blueviolet; */
    box-shadow: 0px 0px 1px 1px silver;
    color: whitesmoke;
}

.button-darkgreen-confirm-block:active {
    background: linear-gradient(to bottom right, darkgrey 0%, #4CAF50 100%);;
    padding-left: 4px;
    padding-right: 2px;
    color: black;
}
/* ... */

